--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.so
 *.dylib
 
+!/internal/peeditor/PeEditor.exe
+
 # Test binary, built with `go test -c`
 *.test
 
@@ -20,8 +22,6 @@
 go.work
 
 build/bin
-build/darwin
-build/windows
 build/versions
 logs
 bin
