--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: LeviLauncher build
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
     branches:
-      - '**'  # 允许所有分支
+      - "**"
   pull_request:
 
 jobs:
@@ -13,29 +13,35 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        build: [
-          { name: LeviLauncher, platform: windows/amd64, archs: amd64, os: windows-2022 },
-        ]
+        build:
+          [
+            {
+              name: LeviLauncher,
+              platform: windows/amd64,
+              archs: amd64,
+              os: windows-2022,
+            },
+          ]
     runs-on: ${{ matrix.build.os }}
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      
+
       - uses: ToQuery/wails3-build-action@v3-alpha.14
         with:
           go-archs: ${{ matrix.build.archs }}
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
-          package: false 
+          package: false
 
       - name: Create ZIP archives
         shell: pwsh
         run: |
           Write-Host "Creating ZIP archives for Windows ${{ matrix.build.archs }}"
           cd bin
-          
+
           if (Test-Path "LeviLauncher.exe") {
             $zipName = "LeviLauncher_windows_${{ matrix.build.archs }}.zip"
             Compress-Archive -Path "LeviLauncher.exe" -DestinationPath $zipName -Force
@@ -44,7 +50,7 @@ jobs:
             Write-Host "LeviLauncher.exe not found!"
             Get-ChildItem
           }
-          
+
           Write-Host "Files in bin directory:"
           Get-ChildItem
 
@@ -60,7 +66,7 @@ jobs:
     needs: build
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -94,19 +100,101 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "Uploading release assets..."
-          
+
           for zip_file in ./artifacts/*/*.zip; do
             if [ -f "$zip_file" ]; then
               echo "Uploading ZIP: $zip_file"
               gh release upload ${{ github.ref_name }} "$zip_file" --clobber
             fi
           done
-          
+
           for installer_file in ./artifacts/*/*installer.exe; do
             if [ -f "$installer_file" ]; then
               echo "Uploading installer: $installer_file"
               gh release upload ${{ github.ref_name }} "$installer_file" --clobber
             fi
           done
-          
+
           echo "All assets uploaded successfully"
+
+  upload-to-target-repo:
+    name: Upload EXE to Target Repository
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          path: ./downloaded-artifacts
+
+      - name: Find EXE file
+        id: find_exe
+        run: |
+          echo "Looking for EXE files..."
+          find ./downloaded-artifacts -name "*.exe" -type f | grep -v installer || true
+
+          EXE_FILE=$(find ./downloaded-artifacts -name "LeviLauncher.exe" -type f | head -1)
+          if [ -n "$EXE_FILE" ]; then
+            echo "Found EXE file: $EXE_FILE"
+            echo "exe_path=$EXE_FILE" >> $GITHUB_OUTPUT
+          else
+            echo "LeviLauncher.exe not found in artifacts"
+
+            OTHER_EXE=$(find ./downloaded-artifacts -name "*.exe" -type f | grep -v installer | head -1)
+            if [ -n "$OTHER_EXE" ]; then
+              echo "Found alternative EXE file: $OTHER_EXE"
+              echo "exe_path=$OTHER_EXE" >> $GITHUB_OUTPUT
+            else
+              echo "No suitable EXE file found"
+              exit 1
+            fi
+          fi
+
+      - name: Checkout target repository
+        uses: actions/checkout@v4
+        with:
+          repository: dreamguxiang/LeviLauncher
+          token: ${{ secrets.TARGET_REPO_TOKEN }}
+          path: target-repo
+
+      - name: Setup target repository
+        run: |
+          cd target-repo
+
+          mkdir -p windows
+
+          cp ../${{ steps.find_exe.outputs.exe_path }} windows/LeviLauncher.exe
+
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+          if git diff --quiet; then
+            echo "No changes to commit"
+            echo "has_changes=false" >> $GITHUB_ENV
+          else
+            echo "Changes detected, preparing commit"
+            echo "has_changes=true" >> $GITHUB_ENV
+          fi
+
+      - name: Commit and push to target repository
+        if: env.has_changes == 'true'
+        run: |
+          cd target-repo
+
+          git add windows/LeviLauncher.exe
+
+          git commit -m "Update LeviLauncher.exe from ${{ github.repository }}@${{ github.sha }}"
+
+          git push origin main
+
+      - name: Create tag in target repository
+        if: env.has_changes == 'true'
+        run: |
+          cd target-repo
+
+          TAG_NAME="${{ github.ref_name }}"
+
+          git tag -a "$TAG_NAME" -m "Release $TAG_NAME"
+          git push origin "$TAG_NAME"
